--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Dear my friend</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
-
-### This is my first Github Pages
+### My Pages
